; ModuleID = '/home/carl/AnghaBench/linux/net/bridge/extr_br_vlan.c_br_vlan_link_state_change.c'
source_filename = "/home/carl/AnghaBench/linux/net/bridge/extr_br_vlan.c_br_vlan_link_state_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.net_bridge = type { i32 }
%struct.br_vlan_link_state_walk_data = type { %struct.net_bridge* }

@br_vlan_link_state_change_fn = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.net_bridge*)* @br_vlan_link_state_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @br_vlan_link_state_change(%struct.net_device* %0, %struct.net_bridge* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.net_bridge*, align 8
  %5 = alloca %struct.br_vlan_link_state_walk_data, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.net_bridge* %1, %struct.net_bridge** %4, align 8
  %6 = getelementptr inbounds %struct.br_vlan_link_state_walk_data, %struct.br_vlan_link_state_walk_data* %5, i32 0, i32 0
  %7 = load %struct.net_bridge*, %struct.net_bridge** %4, align 8
  store %struct.net_bridge* %7, %struct.net_bridge** %6, align 8
  %8 = call i32 (...) @rcu_read_lock()
  %9 = load %struct.net_device*, %struct.net_device** %3, align 8
  %10 = load i32, i32* @br_vlan_link_state_change_fn, align 4
  %11 = call i32 @netdev_walk_all_upper_dev_rcu(%struct.net_device* %9, i32 %10, %struct.br_vlan_link_state_walk_data* %5)
  %12 = call i32 (...) @rcu_read_unlock()
  ret void
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local i32 @netdev_walk_all_upper_dev_rcu(%struct.net_device*, i32, %struct.br_vlan_link_state_walk_data*) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
